src/test/ui/warn-path-statement.stderr
error: path statement with no effect
  --> $DIR/warn-path-statement.rs:5:5
   |
LL |     x;
   |     ^^
   |
   = note: requested on the command line with `-D path-statements`

error: aborting due to previous error

